--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,8 +1,13 @@
-<ion-navbar *navbar>
-  <ion-title>
-    Ionic Blank Renato
-  </ion-title>
-</ion-navbar>
+<ion-header>
+  <ion-navbar>
+    <button menuToogle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+      Ionic APP
+    </ion-title>
+  </ion-navbar>
+</ion-header>
 
 <ion-content class="home" padding>
   The world is your oyster hahahaha.
