--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="menuContent">
+<ion-menu [content]="menuContent" id='menu1' persistent='true'>
 
   <ion-toolbar>
     <ion-title>Menu Principal</ion-title>
@@ -6,9 +6,26 @@
 
   <ion-content>
      <ion-list>
-       <button ion-item *ngFor="let p of pages"  (click)="openPage(p)" menuToogle>
+       <button ion-item *ngFor="let p of pages"  (click)="openPage(p, 'menu1')">
         <ion-icon name="{{ p.icon }}"></ion-icon>
-         {{ p.title}}
+         {{ p.title }}
+       </button>
+      </ion-list>
+   </ion-content>
+
+</ion-menu>
+
+<ion-menu [content]="menuContent"  side = "right" type="push" id="menu2" persistent="true" (ionOpen)="MenuOpened()">
+
+  <ion-toolbar>
+    <ion-title>Menu Secondário</ion-title>
+  </ion-toolbar>
+
+  <ion-content>
+     <ion-list>
+       <button ion-item *ngFor="let p of pages"  (click)="openPage(p, 'menu2')">
+        <ion-icon name="{{ p.icon }}"></ion-icon>
+         {{ p.title }}
        </button>
       </ion-list>
    </ion-content>
