--- a/app/pages/menu-teste/menu-teste.html
+++ b/app/pages/menu-teste/menu-teste.html
@@ -1,10 +1,20 @@
 <ion-navbar *navbar>
-  <button menuToogle>
+  
+  <button menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
   <ion-title>Menu Teste</ion-title>
+
+  <ion-buttons right>
+    <button menuToggle="right">
+      <ion-icon name = "menu"></ion-icon>
+    </button>
+  </ion-buttons>
+
 </ion-navbar>
 
 <ion-content padding class="menu-teste">
+
+<p>Pagina criada para teste</p>
 
 </ion-content>
