--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -22,6 +22,6 @@
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
 
-  <button block (click)='pushPage()'>Open New Page</button>
+  <button block (click)='pushPage()'>Abrir nova pagina</button>
 
 </ion-content>
