--- a/app/pages/menu-teste/menu-teste.html
+++ b/app/pages/menu-teste/menu-teste.html
@@ -1,9 +1,9 @@
 <ion-navbar *navbar>
-  
+
   <button menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
-  <ion-title>Menu Teste</ion-title>
+  <ion-title>Pagina de Teste</ion-title>
 
   <ion-buttons right>
     <button menuToggle="right">
