--- a/app/pages/alerta/alerta.html
+++ b/app/pages/alerta/alerta.html
@@ -1,11 +1,20 @@
-<!--
-  Generated template for the AlertaPage page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-navbar *navbar>
   <ion-title>Componente de ALerta</ion-title>
+
+  <button menuToggle>
+    <ion-icon name="menu"></ion-icon>
+  </button>
+  <ion-title>
+    Ionic APP
+  </ion-title>
+
+  <ion-buttons right>
+    <button menuToggle="right">
+      <ion-icon name = "menu"></ion-icon>
+    </button>
+  </ion-buttons>
+  
 </ion-navbar>
 
 <ion-content padding class="alerta">
