--- a/app/pages/cartoes-test/cartoes-test.html
+++ b/app/pages/cartoes-test/cartoes-test.html
@@ -1,13 +1,68 @@
-<!--
-  Generated template for the CartoesTestPage page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-navbar *navbar>
   <ion-title>Teste de Cartões</ion-title>
+
+  <button menuToggle>
+    <ion-icon name="menu"></ion-icon>
+  </button>
+  <ion-title>
+    Ionic APP
+  </ion-title>
+
+  <ion-buttons right>
+    <button menuToggle="right">
+      <ion-icon name = "menu"></ion-icon>
+    </button>
+  </ion-buttons>
+
 </ion-navbar>
 
-<ion-content padding class="cartoes-test">
+<ion-content  class="cartoes-test">
 
+  <ion-card>
+
+    <ion-card-header>
+      Inonic 2
+    </ion-card-header>
+    <ion-card-content>
+      <P>Olá mundão</P>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+
+    <img src="./../../imagens/fla.jpg" alt="">
+
+    <ion-card-content>
+      <ion-card-title>
+        Ionic 2
+      </ion-card-title>
+      <P>Olá mundão</P>
+    </ion-card-content>
+
+    <ion-row no-padding>
+
+      <ion-col>
+        <button clear small>
+          <ion-icon name="star"></ion-icon>
+          Favorite
+        </button>
+      </ion-col>
+
+      <ion-col text-center>
+        <button clear small>
+          <ion-icon name="musical-notes"></ion-icon>
+          Listen
+        </button>
+      </ion-col>
+
+      <ion-col text-rigth>
+        <button clear small>
+          <ion-icon name="share"></ion-icon>
+          Share
+        </button>
+      </ion-col>
+
+    </ion-row>
+  </ion-card>
 </ion-content>
