--- a/app/pages/icones-test/icones-test.html
+++ b/app/pages/icones-test/icones-test.html
@@ -1,6 +1,6 @@
 
 <ion-navbar *navbar>
-  <ion-title>Teste de Alertas</ion-title>
+  <ion-title>Teste de Icones</ion-title>
 
   <button menuToggle>
     <ion-icon name="menu"></ion-icon>
@@ -14,9 +14,11 @@
 
 </ion-navbar>
 
-<ion-content padding class="alerta">
+<ion-content padding class="icones-test">
 
-<p>Olá {{ user }}</p>
+  <ion-icon name="home"></ion-icon>
+  <ion-icon name="star" danger></ion-icon>
+  <h1><ion-icon name="bus" renato></ion-icon></h1>
 
-<button (click)="showAlert()">Mostrando Alerta</button>
+
 </ion-content>
