--- a/app/pages/botoes-test/botoes-test.html
+++ b/app/pages/botoes-test/botoes-test.html
@@ -1,11 +1,8 @@
 <ion-navbar *navbar>
-  <ion-title>Botoes</ion-title>
+  <ion-title>Teste de Botoes</ion-title>
   <button menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
-  <ion-title>
-    Ionic APP
-  </ion-title>
 
   <ion-buttons right>
     <button menuToggle="right">
