--- a/app/pages/generated-test/generated-test.html
+++ b/app/pages/generated-test/generated-test.html
@@ -5,7 +5,7 @@
     <ion-icon name="menu"></ion-icon>
   </button>
 
-  <ion-title>Generated Test</ion-title>
+  <ion-title>Busca de Endereço</ion-title>
 
   <ion-buttons right>
     <button menuToggle="right">
@@ -19,8 +19,8 @@
 
 <ion-content padding class="generated-test">
 
-<p>Pagina Gerada Automaticamente</p>
+<p>Clique no botão abaixo para entrar com o CEP</p>
 
-<button (click)='buscarCep()'>Entre com CEP</button>
+<button (click)='InputCEP()'>Entre com CEP</button>
 
 </ion-content>
