--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -4,24 +4,24 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Ionic APP
+      Home
     </ion-title>
-
-    <ion-buttons right>
-      <button menuToggle="right">
-        <ion-icon name = "menu"></ion-icon>
-      </button>
-    </ion-buttons>
 
   </ion-navbar>
 </ion-header>
 
 <ion-content class="home" padding>
-  The world is your oyster hahahaha.
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+  Meu Primeiro APP
   </p>
 
-  <button block (click)='pushPage()'>Abrir nova pagina</button>
+  <p>
+    Através do Menu escolha a opção desejada.
+  </p>
+  <p>
 
+  </p>
+  <p>
+  Renato Câmara (Dezembro-2016)
+  </p>
 </ion-content>
