--- a/app/pages/veiculo-modal/veiculo-modal.html
+++ b/app/pages/veiculo-modal/veiculo-modal.html
@@ -26,18 +26,17 @@
         Abastecimento
       </button>
 
-      <button ion-button yellow block (click)="Ordemservico()">
+      <button ion-button alerta block (click)="Ordemservico()">
         Troca de óleo do motor
       </button>
 
-      <button ion-button dark block (click)="Ordemservico()">>
+      <button ion-button alerta block (click)="Ordemservico()">
         Revisão dos 10.000 km
       </button>
 
     </ion-list>
 
-
-  <ion-card>
+    <ion-card>
     <ion-card-header>
       Outras Opções
     </ion-card-header>
