--- a/app/pages/my-todos/my-todos.html
+++ b/app/pages/my-todos/my-todos.html
@@ -30,6 +30,7 @@
         <ion-item-options>
           <button danger (click)="removeTodo(item.id)"><ion-icon name="trash"></ion-icon> Delete</button>
           <button secondary (click)="removeTodo(item.id)"><ion-icon name="checkmark"></ion-icon> Done</button>
+          <button light (click)="updateTodo(item.id, item.name)"><ion-icon name="create"></ion-icon> Done</button>
         </ion-item-options>
       </ion-item-sliding>
     </ion-list>
