--- a/app/pages/my-todos/my-todos.html
+++ b/app/pages/my-todos/my-todos.html
@@ -5,6 +5,11 @@
   Ionic pages and navigation.
 -->
 <ion-navbar *navbar>
+
+  <button menuToggle>
+    <ion-icon name="menu"></ion-icon>
+  </button>
+
   <ion-title>My TODOs</ion-title>
 
   <ion-buttons end>
@@ -12,7 +17,7 @@
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-buttons>
-
+  
 </ion-navbar>
 
 <ion-content padding class="my-todos">
