--- a/app/pages/hoje-tenho-home/hoje-tenho-home.html
+++ b/app/pages/hoje-tenho-home/hoje-tenho-home.html
@@ -4,7 +4,7 @@
     <ion-icon name="menu"></ion-icon>
   </button>
 
-  <ion-title>Hoje Tenho</ion-title>
+  <ion-title>Pagina da Inicial</ion-title>
 
 </ion-navbar>
 
@@ -22,6 +22,7 @@ Selecione abaixo o veiculo
       <h2 danger>Celta</h2>
       <p>info sobre o carro</p>
       <button ion-button secondary clear item-right (click)='openVeiculo()'>View</button>
+      <button ion-button secondary clear item-upper (click)='openVeiculo()'>Odometro</button>
     </ion-item>
     <ion-item>
       <ion-thumbnail item-left>
