--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Home
+      Home My first App
     </ion-title>
 
   </ion-navbar>
